--- a/app/views/web/ost/new-partners/_partner_companies.erb
+++ b/app/views/web/ost/new-partners/_partner_companies.erb
@@ -6,27 +6,27 @@
           on_hover_bgcolor: "classname",
           on_hover_imgcolor: "classname",
           has_exited: false,
-          description_html: '',
+          description_html: '11111',
           founders: [
               {
-                  name: '',
-                  title: ''
+                  name: '222',
+                  title: '33333'
               },
               {
-                  name: '',
-                  title: ''
+                  name: '44444',
+                  title: '5555'
               },
               {
-                  name: '',
-                  title: ''
+                  name: '66666',
+                  title: '77777'
               }
           ],
-          location: '',
-          website: '',
+          location: 'asd',
+          website: '.com',
           social: {
-              twitter: '',
-              medium: '',
-              linkedin: ''
+              twitter: 'tweet',
+              medium: 'med',
+              linkedin: 'link'
           }
       },
       {
@@ -177,6 +177,8 @@
         <!-- Modal body -->
         <div class="modal-body">
           Modal body..
+          <p id="trial"></p>
+          <p id="trial2"></p>
         </div>
 
         <!-- Modal footer -->
