--- a/app/views/web/ost/new-partners/_partner_companies.erb
+++ b/app/views/web/ost/new-partners/_partner_companies.erb
@@ -62,11 +62,7 @@
           ],
           location: 'Los Angeles/ California USA',
           website: 'www.google.com',
-          social: {
-              twitter: 'tweet',
-              medium: 'med',
-              linkedin: 'link'
-          }
+
       },
       {
           categories: ["community", "sharing-economy"],
@@ -216,30 +212,46 @@
                     </div>
                   </div>
                   <div class="col-12 col-md-3">
+                    <% if partner[:founders]%>
                     <div class="founders">
                       <h3>Founders</h3>
-                      <div class="name"></div>
-                      <div class="title"></div>
+                      <%  partner[:founders].each_with_index do|founder, index| %>
+                      <div class="name"><%= founder[:name] %></div>
+                      <div class="title"><%= founder[:title] %></div>
+                      <% end %>
                     </div>
+                    <% end %>
+                    <% if partner[:location]%>
                     <div class="location">
                       <h3>Location</h3>
                       <div class="address"><%= partner[:location] %></div>
                     </div>
+                    <% end %>
+                    <% if partner[:categories]%>
                     <div class="industry">
                       <h3>Industry</h3>
                       <div class="industry-value"><%= partner[:categories].join(", ") %></div>
                     </div>
+                    <% end %>
+                    <% if partner[:size]%>
                     <div class="size">
                       <h3>Size</h3>
                       <div class="size-value"><%= partner[:size] %></div>
                     </div>
+                    <% end %>
+                    <% if partner[:website]%>
                     <div class="website">
                       <h3>Website</h3>
                       <div class="website-value"><a href="<%= partner[:website] %>" target="_blank"><%= partner[:website] %></a></div>
                     </div>
+                    <% end %>
+                    <% if partner[:social]%>
                     <div class="social">
-
+                      <%  partner[:social].each_with_index do|social_info, index| %>
+                        <a href="<%= social_info[:link]  %>"> <%= social_info[:name] %></a>
+                      <% end %>
                     </div>
+                    <% end %>
                   </div>
                 </div>
               </div>
