incomplete modal style

--- a/app/assets/stylesheets/web/ost/new-partners/Partners.scss
+++ b/app/assets/stylesheets/web/ost/new-partners/Partners.scss
@@ -33,6 +33,35 @@
 
       .modal-body {
         padding-top: 0px;
+
+
+          .details{
+            font-size: 10px;
+            font-weight: 800;
+
+          }
+        .details-style{
+          font-size: 10px;
+          border-left: 1px solid  ;
+
+        }
+        @media screen and (max-width: 726px) {
+          .details-style {
+            font-size: 15px;
+            border-left :0px ;
+            border-top: 1px solid;
+            padding-top:10px;
+
+          }
+        }
+
+        .description-style{
+          font-weight: normal;
+          font-size: 13px;
+          padding-bottom: 10px;
+
+        }
+
       }
     }
   }
