--- a/app/views/web/ost/new-partners/_partner_companies.erb
+++ b/app/views/web/ost/new-partners/_partner_companies.erb
@@ -211,30 +211,30 @@
                     <div class="mt-3 mb-2">
                       <img src="" alt="Image not found" >
                     </div>
-                    <div class="description">
+                    <div class="description description-style">
                       <%= raw partner[:description_html] %>
                     </div>
                   </div>
-                  <div class="col-12 col-md-3">
+                  <div class="col-12 col-md-3 details-style">
                     <div class="founders">
-                      <h3>Founders</h3>
+                      <h3 class="text-uppercase details">Founders</h3>
                       <div class="name"></div>
                       <div class="title"></div>
                     </div>
                     <div class="location">
-                      <h3>Location</h3>
+                      <h3 class="text-uppercase details mt-2">Location</h3>
                       <div class="address"><%= partner[:location] %></div>
                     </div>
                     <div class="industry">
-                      <h3>Industry</h3>
+                      <h3 class="text-uppercase details mt-2">Industry</h3>
                       <div class="industry-value"><%= partner[:categories].join(", ") %></div>
                     </div>
                     <div class="size">
-                      <h3>Size</h3>
+                      <h3 class="text-uppercase details mt-2">Size</h3>
                       <div class="size-value"><%= partner[:size] %></div>
                     </div>
                     <div class="website">
-                      <h3>Website</h3>
+                      <h3 class="text-uppercase details mt-2">Website</h3>
                       <div class="website-value"><a href="<%= partner[:website] %>" target="_blank"><%= partner[:website] %></a></div>
                     </div>
                     <div class="social">
