--- a/app/views/web/ost/new-partners/_industries.erb
+++ b/app/views/web/ost/new-partners/_industries.erb
@@ -10,54 +10,54 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-6 col-md-4 my-4 industry" data-category="creative-social">
+        <a class="col-6 col-md-4 my-4 industry smooth-scroll" href="#partner-companies" data-category="creative-social">
           <svg class="svg">
             <switch>
               <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-creative"></use>
             </switch>
           </svg>
           <div class="title-text mt-2">CREATIVE & SOCIAL</div>
-        </div>
-        <div class="col-6 col-md-4 my-4 industry" data-category="loyalty">
+        </a>
+        <a class="col-6 col-md-4 my-4 industry smooth-scroll" href="#partner-companies" data-category="loyalty">
           <svg class="svg">
             <switch>
               <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-loyalty"></use>
             </switch>
           </svg>
           <div class="title-text mt-2">LOYALTY</div>
-        </div>
-        <div class="col-6 col-md-4 my-4 industry" data-category="dapps">
+        </a>
+        <a class="col-6 col-md-4 my-4 industry smooth-scroll" href="#partner-companies" data-category="dapps">
           <svg class="svg">
             <switch>
               <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-dapps"></use>
             </switch>
           </svg>
           <div class="title-text mt-2">DAPPS</div>
-        </div>
-        <div class="col-6 col-md-4 my-4 industry" data-category="marketplaces">
+        </a>
+        <a class="col-6 col-md-4 my-4 industry smooth-scroll" href="#partner-companies" data-category="marketplaces">
           <svg class="svg">
             <switch>
               <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-marketplaces"></use>
             </switch>
           </svg>
           <div class="title-text mt-2">MARKETPLACES</div>
-        </div>
-        <div class="col-6 col-md-4 my-4 industry" data-category="community">
+        </a>
+        <a class="col-6 col-md-4 my-4 industry smooth-scroll" href="#partner-companies" data-category="community">
           <svg class="svg">
             <switch>
               <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-community"></use>
             </switch>
           </svg>
           <div class="title-text mt-2">COMMUNITY</div>
-        </div>
-        <div class="col-6 col-md-4 my-4 industry" data-category="sharing-economy">
+        </a>
+        <a class="col-6 col-md-4 my-4 industry smooth-scroll" href="#partner-companies" data-category="sharing-economy">
           <svg class="svg">
             <switch>
               <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-sharing-economy"></use>
             </switch>
           </svg>
           <div class="title-text mt-2">SHARING ECONOMY</div>
-        </div>
+        </a>
       </div>
     </div>
   </div>
