--- a/app/views/web/ost/new-partners/_partnering_with_ost.erb
+++ b/app/views/web/ost/new-partners/_partnering_with_ost.erb
@@ -1,8 +1,8 @@
-<section class="container-fluid container-partnering-ost">
+<section class="container-fluid container-partnering-ost py-5">
 
   <div class="row">
     <div class="container">
-      <h3 class="text-center mt-5">Partnering with OST</h3>
+      <h3 class="text-center">Partnering with OST</h3>
       <div class="row">
         <div class="col-12 col-md-4 mt-5">
           <div class="row">
