--- a/app/assets/stylesheets/web/ost/new-partners/Partners.scss
+++ b/app/assets/stylesheets/web/ost/new-partners/Partners.scss
@@ -210,32 +210,52 @@ body.modal-open main{
 
   .category-all{
     position: relative;
-    &:after, &:before{
+    &:after{
       height: 14px;
       width: 14px;
       position: absolute;
-      content: '';
-//      opacity: 0.15;
+//      content: url("data:image/svg+xml;charset=UTF-8, <svg xmlns='http://www.w3.org/2000/svg' width='20' height='20' viewBox='0 0 44 44'>
+//  <path d='M22,10a2,2,0,1,1-2,2A2,2,0,0,1,22,10Zm0,10a2,2,0,1,1-2,2A2,2,0,0,1,22,20Zm0,10a2,2,0,1,1-2,2A2,2,0,0,1,22,30Zm0,10a2,2,0,1,1-2,2A2,2,0,0,1,22,40ZM22,0a2,2,0,1,1-2,2A2,2,0,0,1,22,0ZM32,20a2,2,0,1,1-2,2A2,2,0,0,1,32,20ZM12,20a2,2,0,1,1-2,2A2,2,0,0,1,12,20ZM2,20a2,2,0,1,1-2,2A2,2,0,0,1,2,20Zm40,0a2,2,0,1,1-2,2A2,2,0,0,1,42,20Z'/></svg>
+//");
+      content: '+';
+      bottom: 0px;
+      right: -8px;
     }
-    &:before{
-      right: -2px; top: -2px; border-right: 2px dotted green; border-top: 2px dotted green;;
+    &.visible{
+      &:nth-of-type(4n) {
+        &:before, &:after{
+          border: none;
+        }
+      }
     }
-    &:after{
-      left: 0; bottom: 0; border-left: 2px dotted green; border-bottom: 2px dotted green;;
-    }
-//    &:nth-child(-n+4) {
-//      &:before{
-//        border: none;
+//    &:before{
+//      right: -2px; top: -2px; border-right: 2px dotted green; border-top: 2px dotted green;;
+//    }
+//    &:after{
+//      left: 0; bottom: 0; border-left: 2px dotted green; border-bottom: 2px dotted green;;
+//    }
+//    &.visible{
+//      &:nth-child(-n+4) {
+//        &:before, &:after{
+//          border: none;
+//        }
 //      }
 //    }
-//    &:nth-child(4n+1) {
-//      &:after{
-//        border: none;
+//    &:not(.hidden){
+//      &:nth-child(-n+4) {
+//        &:after{
+//          border: none;
+//        }
 //      }
-//    }
-//    &:nth-child(4n+4) {
-//      &:before{
-//        border: none;
+//      &:nth-child(4n+1) {
+//        &:after{
+//          border: none;
+//        }
+//      }
+//      &:nth-child(4n+4) {
+//        &:before{
+//          border: none;
+//        }
 //      }
 //    }
   }
@@ -244,22 +264,22 @@ body.modal-open main{
     height: 0;
     padding-top: 47px / 72px * 100% ;
     &:hover{
+      background-color: red;
       .aspect-ratio-box-inside{
-        background-image: url('https://dxwfxs8b4lg24.cloudfront.net/ost/images/partners/unsplash-white.png');
-        background-color: red;
+//        background-image: url('https://dxwfxs8b4lg24.cloudfront.net/ost/images/partners/unsplash-white.png');
       }
     }
   }
   .aspect-ratio-box-inside {
-    position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
-    background-image: url('https://dxwfxs8b4lg24.cloudfront.net/ost/images/partners/unsplash.png');
-    background-size: 50%;
-    background-repeat: no-repeat;
-    background-position: center;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    position: absolute;
+//    background-size: 50%;
+//    background-repeat: no-repeat;
+//    background-position: center;
 
     @-webkit-keyframes fadeInRightBigrule {
       from {
