--- a/app/assets/stylesheets/web/ost-partners.css
+++ b/app/assets/stylesheets/web/ost-partners.css
@@ -3,6 +3,7 @@
  *= require plugins/slick/slick-theme
  *= require web/ost/new-partners/Partners
  *= require web/common/_icons
+ *= require web/ost/new-partners/Icons
  *= require plugins/bootstrap_select/bootstrap-select
  */
 
