--- a/app/views/web/ost/new-partners/_partner_companies.erb
+++ b/app/views/web/ost/new-partners/_partner_companies.erb
@@ -1,82 +1,121 @@
 <%
   partner_companies = [
       {
-          categories: ["creative-social", "loyalty"],
-          size: "large",
+          name:"LGBT Foundation",
+          categories: ["social&creative" ,"community"],
+          size: "Million User Platform",
           on_hover_bgcolor: "classname",
           on_hover_imgcolor: "classname",
           has_exited: false,
-          description_html: 'LGBT Foundation is a charity based in Manchester with a wide portfolio of services. With a history dating back nearly 40 years, it campaigns for a <b>fair and equal society aimed at meeting the needs of lesbian, gay, bisexual and trans people.</b>',
+          description_html: 'The LGBT Foundation will be launching the LGBT Token to empower, connect and support LGBT+ people all over the world. One of its first launch partners is Hornet Networks, a social platform for gay men with more than 24 million users worldwide.',
           founders: [
               {
-                  name: 'John Shin',
-                  title: 'Co-founder'
-              },
-              {
-                  name: 'Adam Wilhelmi',
-                  title: 'CFO'
-              },
-              {
-                  name: 'Ada miles',
-                  title: 'CDO'
+                  name: 'Christoph Wittig',
+                  title: 'Not known'
               }
           ],
-          location: 'Los Angeles/ California USA',
-          website: 'http://www.google.com',
+          location: 'London',
+          website: 'https://lgbt.foundation/',
           social: [
               {
-                  name: 'twitter',
+                  name: 'not known ',
                   link:"link"
 
-              },
-              {
-                  name: 'medium',
-                  link:"link"
-              },
-              {
-                  name: 'linkedin',
-                  link:"link"
               }
           ]
       },
       {
-          categories: ["dapps", "marketplaces"],
-          size: "start-ups",
+          name:"FinComEco",
+          categories: ["marketplace"],
+          size: "Startup",
           on_hover_bgcolor: "classname",
           on_hover_imgcolor: "classname",
           has_exited: false,
-          description_html: 'LGBT Foundation is a charity based in Manchester with a wide portfolio of services. With a history dating back nearly 40 years, it campaigns for a fair and equal society aimed at meeting the needs of lesbian, gay, bisexual and trans people.',
+          description_html: 'GMEX, Block Commodities Ltd. and FinComEco are endeavouring to build a tokenised ecosystem of e-commerce partners featuring local vendors and service providers, as well as medical and educational institutions, where the FACES tokens can be redeemed.',
           founders: [
               {
-                  name: 'John Shin',
-                  title: 'Co-founder'
-              },
-              {
-                  name: 'Adam Wilhelmi',
-                  title: 'CFO'
-              },
-              {
-                  name: 'Ada miles',
-                  title: 'CDO'
+                  name: 'Hirander Misra',
+                  title: 'Not known'
               }
           ],
-          location: 'Los Angeles/ California USA',
-          website: 'www.google.com',
+          location: 'London',
+          website: 'http://www.fincomeco.com/',
+          social: [
+              {
+                  name: 'not known ',
+                  link:"link"
+
+              }
+          ]
 
       },
       {
-          categories: ["community", "sharing-economy"],
-          size: "large",
+          name:"Unsplash",
+          categories: ["social&creative"],
+          size: "Million User Platform",
           on_hover_bgcolor: "classname",
           on_hover_imgcolor: "classname",
-          has_exited: false
+          has_exited: false,
+          description_html: 'Unsplash is the world’s leading photography platform. Unsplash served more than 5.4 Billion photo views in January, up more than 300% from 12 months ago. Unsplash and OST are partnering to reinvent, decentralize, and democratize photography.',
+          founders: [
+              {
+                  name: 'Steph Liverani',
+                  title: 'Not known'
+              },
+              {
+                  name: 'Mikael Cho',
+                  title: 'Not known'
+              },
+              {
+                  name: 'Luke Chesser',
+                  title: 'not known'
+              }
+
+          ],
+          location: 'Montreal',
+          website: 'https://unsplash.com/',
+          social: [
+              {
+                  name: 'medium',
+                  link:"https://medium.com/unsplash"
+
+              }
+          ]
+
       },
       {
-          categories: ["creative-social", "loyalty"],
-          size: "start-ups",
+          name:"Fainin",
+          categories: ["sharing economy"],
+          size: "Startup",
           on_hover_bgcolor: "classname",
           on_hover_imgcolor: "classname",
-          has_exited: false
+          has_exited: false,
+          description_html: 'When one of the founders was living in a dorm, he saw the need for a well-organised way to borrow stuff you rarely use. Like a drill or a tripod. Backed by a major insurer, Fainin will also feature “try before you buy” and “rent on location” products, like a pair of skis when staying at an AirBnB in the Alps.',
+          founders: [
+              {
+                  name: 'Steph Liverani',
+                  title: 'Not known'
+              },
+              {
+                  name: 'Mikael Cho',
+                  title: 'Not known'
+              },
+              {
+                  name: 'Luke Chesser',
+                  title: 'not known'
+              }
+
+          ],
+          location: 'Berlin',
+          website: 'https://unsplash.com/',
+          social: [
+              {
+                  name: 'medium',
+                  link:"https://medium.com/unsplash"
+
+              }
+          ]
+
       },
       {
           categories: ["dapps", "marketplaces"],
