--- a/app/assets/stylesheets/web/ost/new-partners/Partners.scss
+++ b/app/assets/stylesheets/web/ost/new-partners/Partners.scss
@@ -494,3 +494,61 @@ body.modal-open main{
   display: inline-block;
   width:auto !important;
 }
+
+.use_cases{
+  background-color: #e7f6f7;
+  .link{
+    color: #27b9d2;
+    font-weight: 500;
+    font-size: 12px;
+    font-family: Quasimoda;
+    letter-spacing: 1.5px;
+    &:hover{
+      border-bottom: 1px solid #27b9d2;
+      padding-bottom: 2px;
+
+    }
+    &:focus{
+      outline: none;
+    }
+  }
+  .play {
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    position: absolute;
+    background-color: #fff;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    margin: auto;
+    box-shadow: 0 3px 3px 0 rgba(0,0,0,0.25);
+    -webkit-box-shadow: 0 3px 3px 0 rgba(0,0,0,0.25);
+    .svg-play {
+      width: 15px;
+      height: 20px;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%,-50%);
+      position: absolute;
+    }
+  }
+  .slick-prev:before, .slick-next:before{
+    font-size: 35px;
+    color: #597a84;
+
+  }
+
+  @media screen and (max-width: map-get($grid-breakpoints, 'lg')) {
+    .slick-prev{
+      left: -30px;
+    }
+    .slick-next{
+      right:-30px;
+    }
+
+  }
+
+
+}
