stop prev video

--- a/app/views/web/ost/new-partners/_use_cases.erb
+++ b/app/views/web/ost/new-partners/_use_cases.erb
@@ -147,6 +147,11 @@
       </div>
       <% end %>
   </div>
+  <div class="text-center">
+    <a class="btn btn-secondary text-center mt-lg-5 mt-3" href="/challenges">
+      VIEW ALL POC PROJECTS
+    </a>
+  </div>
 
 
 </section>
