--- a/app/assets/stylesheets/web/ost/new-partners/Partners.scss
+++ b/app/assets/stylesheets/web/ost/new-partners/Partners.scss
@@ -497,6 +497,8 @@ body.modal-open main{
 
 .use_cases{
   background-color: #e7f6f7;
+  overflow-x: hidden;
+
   .link{
     color: #27b9d2;
     font-weight: 500;
