position play btn correctly

--- a/app/views/web/ost/new-partners/_use_cases.erb
+++ b/app/views/web/ost/new-partners/_use_cases.erb
@@ -111,8 +111,11 @@
           <div id="use-cases">
                 <div class="pt-3 pt-lg-5 bg-blue">
                     <div class="row">
+                      <div class="col-12 text-center d-lg-none">
+                      <h4 class="mb-4"><%= data[:title]%></h4>
+                      </div>
                       <div class="col-12 col-lg-7 play-video">
-                        <h4 class="mb-4 text-center d-lg-none"><%= data[:title]%></h4>
+
                         <div class="video-image">
                           <img src="<%= data[:youtube_img]%>" class="img-fluid" alt="OST - Design Your Token" title="" />
                           <div class="play">
