--- a/app/views/web/ost/new-partners/_industries.erb
+++ b/app/views/web/ost/new-partners/_industries.erb
@@ -10,7 +10,7 @@
         </div>
       </div>
       <div class="row">
-        <a class="col-6 col-md-4 my-4 industry smooth-scroll" href="#partner-companies" data-category="creative-social">
+        <a class="col-6 col-md-4 my-4 industry smooth-scroll" href="#partner-companies" data-category="social-creative">
           <svg class="svg">
             <switch>
               <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-creative"></use>
@@ -26,7 +26,7 @@
           </svg>
           <div class="title-text mt-2">LOYALTY</div>
         </a>
-        <a class="col-6 col-md-4 my-4 industry smooth-scroll" href="#partner-companies" data-category="dapps">
+        <a class="col-6 col-md-4 my-4 industry smooth-scroll" href="#partner-companies" data-category="DApp">
           <svg class="svg">
             <switch>
               <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-dapps"></use>
@@ -34,7 +34,7 @@
           </svg>
           <div class="title-text mt-2">DAPPS</div>
         </a>
-        <a class="col-6 col-md-4 my-4 industry smooth-scroll" href="#partner-companies" data-category="marketplaces">
+        <a class="col-6 col-md-4 my-4 industry smooth-scroll" href="#partner-companies" data-category="marketplace">
           <svg class="svg">
             <switch>
               <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-marketplaces"></use>
